--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                 lat: 21.0946906,
                 long: 73.1055137
             }
+            {
+                name: "Sthapatya",
+                lat: 21.2490048,
+                long: 7954124,19,
+                
+            },
         ];
 
         cities.forEach(city => {
