--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             {
                 name: "Sthapatya",
                 lat: 21.2490048,
-                long: 7954124,19 
+                long: 72.7954124 
             },
         ];
 
